welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: value update is not a member of Boolean
      isFacingTrail()=false
      ^